--- a/ElectricalApplianceSpring/pom.xml
+++ b/ElectricalApplianceSpring/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>ua.org.training.spring</groupId>
-  <artifactId>ResisterFormSpring</artifactId>
+  <artifactId>ElectricalApplianceSpring</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
